Configurando a porta da app, o console do H2 e desabilitando o DDL do Hibernate.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8080
 
+## O Hibernate não criará as tabelas baseadas no modelo
+spring.jpa.hibernate.ddl-auto=none
+
+## Habilita o console do H2 no navegador
+spring.h2.console.enabled=true
