--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.hibernate.ddl-auto=none
 ## Habilita o console do H2 no navegador
 spring.h2.console.enabled=true
 ## Define a url de conexão com o banco
-spring.datasource.url=jdbc:h2:mem:meuBancoDeDados
+spring.datasource.url=jdbc:h2:mem:shopApiDB
