Adaptando a aplicação para ser executada no Docker.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
 ## Define a url de conexão com o banco
 spring.datasource.url=jdbc:h2:mem:shopApiDB
+
+## Define o endereço da instância do Kafka que será utilizada
+#kafka.bootstrapAddress=kafka:9092
+kafka.bootstrapAddress=${KAFKA_URL:localhost:9092}
